--- a/presentations/slides/cni2018.md
+++ b/presentations/slides/cni2018.md
@@ -97,7 +97,7 @@ li {font-size: 30px !important; margin: 12px !important;}
 	* State retention schedule
 	* "Decentralized" (mostly non-existent) records management
 	* 18,000 student, 1,200+ faculty university
-	* Need to demonstrate value to university
+	* Need to demonstrate value to university offices
 
 ---
 
