added print version of slides

--- a/presentations/slides/cni2018.md
+++ b/presentations/slides/cni2018.md
@@ -4,10 +4,13 @@ revealOptions:
     transition: 'fade'
 ---
 
+<link rel="stylesheet" href="css/print/pdf.css">
+
 <style>
 #fLeft {float: left; max-width: 58%;}
 #fRight {float: right; max-width: 38%;}
 li {font-size: 30px !important; margin: 12px !important;}
+.reveal.center, .reveal.center .slides, .reveal.center .slides section { min-height: 900px !important; }
 </style>
 
 ## The Espy Project
@@ -264,7 +267,7 @@ our own</li>
 * Issues with digital archival objects as well
 * Archives have a fundamental mission conflict with linked data
 	* Archives is a system to manage objects with minimal metadata
-	* Archives offer information in context, not verifiable data
+	* Archives offer information in context, not objective/verifiable data
 
 ---
 
