updated nyac slides

--- a/presentations/slides/nyac2018.md
+++ b/presentations/slides/nyac2018.md
@@ -176,6 +176,8 @@ revealOptions:
 	* No more ad-hoc approaches
 	* No more XML data stores
 * Network of well-maintained interoperable tools
+	* APIs connections
+	* Data Models
 
 ---
 
@@ -238,6 +240,15 @@ revealOptions:
 	* \\\\LINCOLN\\Library\\SPE Staff\\Greg\\asInventory
 * [Box uploader](http://libstaff/find-it/boxes.html)
 
+---
+
+## Data Models!
+
+<img src="img/lunaDataModel.png"/>
+
+---
+
+<!-- .slide: data-background="img/linkedData.png" -->
 
 ---
 
