more nyac updates

--- a/presentations/slides/nyac2018.md
+++ b/presentations/slides/nyac2018.md
@@ -19,6 +19,8 @@ revealOptions:
 
 ## Born-Digital Records at UAlbany
 
+* Overview of UAlbany's born digital records
+* First attempt and maintenance issues
 * Building Born-Digital infrastructure
 * Making Access Familiar
 * Challenges (they're not really technical)
@@ -284,7 +286,7 @@ revealOptions:
 ## Make Access Familiar
 
 * Discoverable alongside paper records
-* In context with upper level Archival Description
+* [In context with upper level Archival Description](http://169.226.92.29:8080/concern/digital_archival_objects/fj236208t?locale=en)
 * Purpose of website is to access paper and digital records
 * Demonstrate value to campus and outside donors
 * Computational access to collections data
