--- a/presentations/slides/nyac2018.md
+++ b/presentations/slides/nyac2018.md
@@ -23,7 +23,6 @@ revealOptions:
 * First attempt and maintenance issues
 * Building Born-Digital infrastructure
 * Making Access Familiar
-* Challenges (they're not really technical)
 
 ---
 
@@ -61,6 +60,7 @@ revealOptions:
 * Today most permanent records are created digitally
 * Digital space is less of a barrier
 * Creators want near-immediate access
+* Chicken and Egg resources problem
 
 ---
 
@@ -97,19 +97,6 @@ revealOptions:
 
 
 <!-- .slide: data-background="img/diskImaging.jpg" -->
-
----
-
-## Born-Digital Collecting Priorities
-
-1. Automated digital transfers over network storage
-2. Web crawling
-3. Disk imaging of robust external media
-4. Manual transfer over cloud storage
-5. Records in web-based systems with open APIs
-6. Paper when maintained as such
-7. Records in closed systems
-8. Disk imaging of magnetic media
 
 ---
 
@@ -183,28 +170,6 @@ revealOptions:
 
 ---
 
-## Things I don't really care about
-
-* File formats
-	* identification
-	* validation
-	* migration for preservation
-* Literal interpretation of OAIS
-* Compression
-* Any micro preservation activity
-
----
-
-## Things I do care about
-
-* Automation/scale
-* Description/content standards
-* Maintenance
-* Documentation
-* Access
-
----
-
 ## Introduction to APIs
 
 * [Wayback Machine](https://web.archive.org/web/*/http://www.albany.edu/undergraduate_bulletin/)
@@ -225,10 +190,10 @@ revealOptions:
 
 ## What can you do with ASpace API?
 
+* Fully exploit archival description
 * Automate any changes at any scale
 	* Data Model makes sure its consistent
 * Connect with other systems
-* Develop interoperable workflows
 * Rely on the community for sustainable code
 * [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake) makes it easier
 
@@ -271,15 +236,6 @@ revealOptions:
 
 <img src="img/apiWorkflow.png"/>
 
----
-
-## Open, Interconnected Workflows
-
-1. Detect accession
-2. Get contextual data from ArchivesSpace API
-4. Ingest into digital repository
-5. Que for review 
-6. Expose data into central search index
 
 ---
 
@@ -289,9 +245,6 @@ revealOptions:
 * [In context with upper level Archival Description](http://169.226.92.29:8080/concern/digital_archival_objects/fj236208t?locale=en)
 * Purpose of website is to access paper and digital records
 * Demonstrate value to campus and outside donors
-* Computational access to collections data
-	* Researchers use APIs too
-	* Rights for this part of EAD and DACS
 
 ---
 
@@ -305,37 +258,34 @@ revealOptions:
 
 ---
 
-## Practical Challenges
+## Things I don't really care about
+
+* File formats
+	* identification
+	* validation
+	* migration for preservation
+* Literal interpretation of OAIS
+* Compression
+* Any micro preservation activity
+
+---
+
+## Things I do care about
+
+* Automation/scale
+* Description/content standards
+* Maintenance
+* Documentation
+* Access
+
+---
+
+## Challenges
 
 * Administering Hyrax Sustainably
 * Advocacy and legwork with creators
 * Updating
 * Maintenance
-
----
-
-## Wider Challenges
-
-* Technical Literacy
-	* Data modeling
-	* User Experience Design (UX)
-* Resources demands
-	* Use extensible processing
-* Communication
-	* Getting archivists and technologists on the same page
-* System Administration and *minimal* custom development
-	* Staffing and administration problem
-	* Programmer-Archivists is not a great solution
-* Demonstrate Value
-	*  Chicken and Egg problem
-
----
-
-## Strengths
-
-* Community
-* Openness
-* Archivists are awesome
 
 ---
 
