updated ait 2018 slides

--- a/presentations/slides/ait2018.md
+++ b/presentations/slides/ait2018.md
@@ -12,10 +12,11 @@ revealOptions:
 </style>
 
 ### Describing Web Archives with the Partner Data API
-
+<br/>
 ##### Gregory Wiedeman
 ##### University Archivist
 ##### University at Albany, SUNY
+##### <img src="img-saa16/twitter.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="45px" /> @GregWiedeman
 
 ---
 
@@ -36,10 +37,9 @@ revealOptions:
 
 ### Web Archiving at UAlbany
 
-* Department of 4 permanent, 1 soft-funded lines
-    * 2-3 LIS grad students, work-study undergrads
 * 1 University Archives line (me)
-    * 12-20 hr/week grad student most semesters
+    * 1 part time grad student most semesters
+* We have stuff to do
     * ~18,000 student, 1,200 staff university
     * Public records collecting program
     * ~250 collections, ~1/3 folder-level description
@@ -56,10 +56,16 @@ revealOptions:
     
 ---
 
+### If I had to enter detailed information for each Archive-It collection (or each seed!),
+
+### I would collect less.
+
+---
+
 ### Describing Web Archives with DACS
 
 * Use context to efficiently manage records at scale
-* Power of Provenance
+* "Power of Provenance"
     * Discovery by context of creation/use, rather than format silos
 * Aggregate descripion
     * Minimum  level of description
@@ -159,28 +165,63 @@ edu,albany)/president/about-the-president.php 20180717204617 https://www.albany.
 
 ## Partner Data API
 
-
-
+* Its the stuff in the Archive-It web app
+    * [Collections](https://partner.archive-it.org/api/collection?id=7082)
+    * [Seeds!](https://partner.archive-it.org/api/seed/1020827)
+    * [Seeds in a collection!](https://partner.archive-it.org/api/seed?collection=6372)
+    * [Crawls!](https://partner.archive-it.org/api/crawl_job/303101)
+    * [Rules!](https://partner.archive-it.org/api/scope_rule?collection=6372)
+    * [Metadata!](https://partner.archive-it.org/api/seed?collection=3721)
 
 ---
 
 ## Content Storage
 
+<div id="fLeft">
+<img src="img/webArchivesAspace.png"/>
+</div>
+<div id="fRight">
+<ul>
+<li>Need a place to put stuff</li>
+<li>Hyrax Repository with Web Archives Model</li>
+<li>API ingest</li>
+<li>[PCDM Web Archives Working Group](https://github.com/pcdm/webarchiving_wg/wiki/February-20,-2018)</li>
+<li>[A Model!](https://docs.google.com/drawings/d/1YiY-tQ4HnNVf-fU-cX50OdWX1xwdImji4Cl63LBS9gM/edit)</li>
+</ul>
+</div>
+
+    
+---
+
+## Describing Web Archives
+
+1. Scope and schedule crawls in Archive-It
+2. Describe in ASpace with other records
+3. [Get dates and extents from CDX, post new AOs](http://wayback.archive-it.org/6372/timemap/cdx?url=http://www.albanystudentpress.net)
+4. Download WARCS with WASAPI
+5. [Get crawl and scoping rules](https://partner.archive-it.org/api/crawl_job/303101)
+6. Make all this discoverable
 
 ---
 
 ## Two Processes
 
-1. Automated updates of ArchivesSpace records
+1. Automated updates of ASpace records from CDX
     * Standard method of defining Web Archives actionably
+    * ASpace Plugin or exterior API process
         
 2. New content records for each capture
     * Standard Data Model
+    * System Agnostic process for this
     
 ---
 
-## Need use cases and Standard Practices
+## I need help!
 
-* ASpace Plugin to 
+* More use cases!
+* Defining standard practices
+* Describing Web Archives Working Group?
 
----
+* Slides: [http://gregwiedeman.com/ait2018.html](http://www.gregwiedeman.com/ait2018.html)
+* Code: [https://github.com/UAlbanyArchives/describingWebArchives](https://github.com/UAlbanyArchives/describingWebArchives)
+
