made draft slides into html

--- a/presentations/slides/ait2018.md
+++ b/presentations/slides/ait2018.md
@@ -1,10 +1,3 @@
----
-title: Processing Born-Digital Images at Scale
-theme: serif
-revealOptions:
-    transition: 'fade'
----
-
 <style>
 #fLeft {float: left; max-width: 50%;}
 #fRight {float: right; max-width: 50%;}
@@ -18,13 +11,6 @@ revealOptions:
 ##### University at Albany, SUNY
 ##### <img src="img-saa16/twitter.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="45px" /> @GregWiedeman
 
----
-
-### Web Archives are Archives
-
-* Tremendous volume of interlinked information
-* Original, unique material
-* Context of creation and use is important
 
 ---
 
@@ -47,6 +33,13 @@ revealOptions:
 
 ---
 
+### Web Archives are Archives
+
+* Tremendous volume of interlinked information
+* Context of creation and use is important
+	
+---
+
 ### We do not describe web archives as archives
 
 * Archive-It discovery is a format-based silo
@@ -56,9 +49,9 @@ revealOptions:
     
 ---
 
-### If I had to enter detailed information for each Archive-It collection (or each seed!),
+### If I had to enter detailed metadata for each Archive-It collection (or each seed!),
 
-### I would collect less.
+### I would collect less. <!-- .element: class="fragment" data-fragment-index="1" -->
 
 ---
 
