--- a/presentations/slides/ait2018.md
+++ b/presentations/slides/ait2018.md
@@ -1,7 +1,13 @@
+---
+title: Describing Web Archives with the Partner Data API
+revealOptions:
+    transition: 'fade'
+---
 <style>
 #fLeft {float: left; max-width: 50%;}
 #fRight {float: right; max-width: 50%;}
 #smallLink {font-size: 18px;}
+.whitebg {background-color: #fff; margin-top: 30% !important; padding: 15px !important; border-radius: 15px;}
 </style>
 
 ### Describing Web Archives with the Partner Data API
@@ -16,15 +22,10 @@
 
 ### Web Archiving at UAlbany
 
-1. Document permanent university records online
-2. Continue outside collecting in native format
-
----
-
-### Web Archiving at UAlbany
-
+* Document permanent university records online
+* Continue outside collecting in native format
 * 1 University Archives line (me)
-    * 1 part time grad student most semesters
+    * typically a part-time grad student
 * We have stuff to do
     * ~18,000 student, 1,200 staff university
     * Public records collecting program
@@ -44,7 +45,7 @@
 
 * Archive-It discovery is a format-based silo
 * Dublin Core/Catalog-like description is inefficent and duplicative
-* Even detailed and laborous description only documents a small portion
+* Even detailed and laborious description only documents a small portion
 * Privileges description of content rather than context
     
 ---
@@ -68,7 +69,7 @@
 
 ### DACS Statement of Principles 
 
-[https://bit.ly/2MkZgCt](https://github.com/saa-ts-dacs/dacs/blob/1fcf9c4ad2888384d2664bf998e1474b44d84697/statement_of_principles.md)
+[https://github.com/saa-ts-dacs/dacs](https://github.com/saa-ts-dacs/dacs) 
 
 > "3. Because archival description privileges intellectual content in context, descriptive rules apply equally to all records, regardless of format or carrier type."
 
@@ -76,7 +77,7 @@
 
 ### DACS Statement of Principles 
 
-[https://bit.ly/2MkZgCt](https://github.com/saa-ts-dacs/dacs/blob/1fcf9c4ad2888384d2664bf998e1474b44d84697/statement_of_principles.md)
+[https://github.com/saa-ts-dacs/dacs](https://github.com/saa-ts-dacs/dacs) 
 
 > "4a. Records must be described in aggregate and may be described in parts."
 
@@ -84,9 +85,13 @@
 
 ### DACS Statement of Principles 
 
-[https://bit.ly/2MkZgCt](https://github.com/saa-ts-dacs/dacs/blob/1fcf9c4ad2888384d2664bf998e1474b44d84697/statement_of_principles.md)
+[https://github.com/saa-ts-dacs/dacs](https://github.com/saa-ts-dacs/dacs) 
 
 > "10. Archivists must have a user-driven reason to enhance existing archival description."
+
+---
+
+<!-- .slide: data-background="img/webArchContext.png" -->
 
 ---
 
@@ -96,7 +101,7 @@
 
 ---
 
-## We Have More Tools
+## Now We Have the Tools
 
 * ArchivesSpace
     * Interoperable storage for archival descripion
@@ -139,6 +144,7 @@ for child in collection.tree.children:
 ## Archive-It CDX
 
 * [List of captures by URL and collection number](https://support.archive-it.org/hc/en-us/articles/115001790023-Access-Archive-It-s-Wayback-index-with-the-CDX-C-API)
+* crawl ID after July 2015
 * <a id="smallLink" href="http://wayback.archive-it.org/3308/timemap/cdx?url=https://www.albany.edu/president/about-the-president.php">http://wayback.archive-it.org/3308/timemap/cdx?url=https://www.albany.edu/president/about-the-president.php</a>
 
 ```
@@ -186,35 +192,56 @@ edu,albany)/president/about-the-president.php 20180717204617 https://www.albany.
     
 ---
 
-## Describing Web Archives
+<!-- .slide: data-background="img/dwa1.png" -->
+<h3 class="whitebg">Scope and schedule crawls in Archive-It</h3>
 
-1. Scope and schedule crawls in Archive-It
-2. Describe in ASpace with other records
-3. [Get dates and extents from CDX, post new AOs](http://wayback.archive-it.org/6372/timemap/cdx?url=http://www.albanystudentpress.net)
-4. Download WARCS with WASAPI
-5. [Get crawl and scoping rules](https://partner.archive-it.org/api/crawl_job/303101)
-6. Make all this discoverable
+---
+
+<!-- .slide: data-background="img/dwa2.png" -->
+<h3 class="whitebg">Describe in ASpace with other records</h3>
+
+---
+
+<!-- .slide: data-background="img/dwa3.png" -->
+<h3 class="whitebg">Use CDX to post new description to ASpace when page is updated</h3>
+
+---
+
+<!-- .slide: data-background="img/dwa4.png" -->
+<h3 class="whitebg">Download WARCS with WASAPI?</h3>
+
+---
+
+<!-- .slide: data-background="img/dwa5.png" -->
+<h3 class="whitebg">Get crawl and scoping rules</h3>
+
+---
+
+<!-- .slide: data-background="img/dwa6.png" -->
+<h3 class="whitebg">Make all this discoverable</h3>
 
 ---
 
 ## Two Processes
 
-1. Automated updates of ASpace records from CDX
-    * Standard method of defining Web Archives actionably
+1. Create ArchivesSpace records from CDX
+    * Standard method of defining Web Archives actionably in ASpace
     * ASpace Plugin or exterior API process
         
-2. New content records for each capture
-    * Standard Data Model
-    * System Agnostic process for this
+2. Create content records for each capture from Partner Data API
+    * Need a standard data model
+    * Need a system agnostic process
     
 ---
 
-## I need help!
+### I need help!
 
 * More use cases!
-* Defining standard practices
-* Describing Web Archives Working Group?
+* Need to define basic standard practices
+* Describing Web Archives Interest Group?
+    * [https://bit.ly/ELsNXC](https://docs.google.com/forms/d/e/1FAIpQLSdfx4qtXYrizbSwR1Uk8OxJS7p9JrRy3JOEAA4ooAOkHnKbrg/viewform?usp=sf_link)
 
 * Slides: [http://gregwiedeman.com/ait2018.html](http://www.gregwiedeman.com/ait2018.html)
 * Code: [https://github.com/UAlbanyArchives/describingWebArchives](https://github.com/UAlbanyArchives/describingWebArchives)
+* DACS Principles: [https://github.com/saa-ts-dacs/dacs](https://github.com/saa-ts-dacs/dacs)
 
