formatted presentation layout

--- a/_presentations/c4l2019.md
+++ b/_presentations/c4l2019.md
@@ -1,6 +1,6 @@
 ---
 title: Providing Computational Access to Records of American Capital Punishment
-day: 2019 February
+date: 2019-02-01
 event: Code4Lib 2019
 link: c4l19.html
 ---
