--- a/_presentations/c4l2019.md
+++ b/_presentations/c4l2019.md
@@ -1,7 +1,7 @@
 ---
 title: Providing Computational Access to Records of American Capital Punishment
-date: 2019-02-01
+date: 2019-02-20
 event: Code4Lib 2019
-link: c4l19.html
+link: code4lib2019.html
 ---
 Code4Lib 2019 talk on the challenges of providing computational access to the Espy Papers, including presenting the material in context and the metadata empathetically.
