--- a/_presentations/saa2018.md
+++ b/_presentations/saa2018.md
@@ -1,7 +1,7 @@
 ---
 title: Challenges and Conflicts of Linked Data in Archives
 date: 2018-08-16
-event: SAA 2018
+event: SAA 2018 Washington DC
 link: https://docs.google.com/presentation/d/1KOojRNEGxP62K-7jkqsoIx7va4fswA2PGxiDC2MlLPM
 pdf: saa2018.pdf
 ---
