--- a/_presentations/cni2018.md
+++ b/_presentations/cni2018.md
@@ -1,7 +1,7 @@
 ---
 title: 'The Espy Project: Enabling New Access to Archival Materials'
 date: 2018-04-12
-event: Coalition for Networked Information
+event: Coalition for Networked Information (CNI)
 link: cni2018.html
 ---
 CNI project report on providing API access to data from a digitization project and using that technology to rework our university records collecting system.
