fixed posts links and some bad titles

--- a/_presentations/nyac2017.md
+++ b/_presentations/nyac2017.md
@@ -1,5 +1,5 @@
 ---
-title: 'Describing Web Archives: Automating Access with APIs and ArchivesSpace'
+title: 'Pragmatic Processing: Diverse Approaches to Different Collections'
 date: 2017-06-08
 event: NYAC 2017
 link: nyac2017.html
