CAA slides update

--- a/slides/caa2020.md
+++ b/slides/caa2020.md
@@ -85,8 +85,9 @@ Curator of Digital Collections
 
 ## Lowering barriers
 
-* Consortium!
+* [EmpireADC](https://www.empireadc.org/) Consortium
 * [staticAid](https://hillelarnold.com/blog/2016/02/a-static-html-site-generator-for-archival-description/)
+* [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake)
 * Respositories are the worst
 
 ---
