--- a/slides/caa2020.md
+++ b/slides/caa2020.md
@@ -51,8 +51,8 @@ Curator of Digital Collections
 * 2016: [ArchivesSpace](https://aspace.library.albany.edu/)
     * [Find-It](https://archives.albany.edu/find-it/)
     * [asInventory](https://github.com/UAlbanyArchives/asInventory)
+* 2019: Wrote [Hyrax](https://archives.albany.edu/catalog) into CLIR Digitization Grant
 * 2019: [ArcLight](https://archives.albany.edu/description/)
-* 2019: [Hyrax](https://archives.albany.edu/catalog)
 
 ---
 
@@ -88,7 +88,7 @@ Curator of Digital Collections
 * [EmpireADC](https://www.empireadc.org/) Consortium
 * [staticAid](https://hillelarnold.com/blog/2016/02/a-static-html-site-generator-for-archival-description/)
 * [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake)
-* Respositories are the worst
+* [Oxford Common File Layout](https://ocfl.io/)
 
 ---
 
