updated ead slides

--- a/slides/EAD2021.md
+++ b/slides/EAD2021.md
@@ -63,7 +63,7 @@ Daniel V. Pitti, "The Berkeley Finding Aid Project," 1994 [http://archive1.villa
 
 ---
 
-### One Common Format
+### One Final Format
 
 * Structure your archival description
 * Preservation format, future-proof
@@ -107,6 +107,32 @@ As the data structure standard, EAD defines how systems work with archival descr
 
 ---
 
+### EAD is Limiting for Aggregators
+
+* "Raw" EAD is challenging to index
+	* Hand-encoded
+	* Custom authoring tools
+* Requires skilled labor to normalize
+* Aggregators need to rely on consistent EAD
+	* ArchivesSpace
+	* EmpireADC using Archipelago-based "form tool"
+
+---
+
+### From XML format to Data Model
+
+<div class="fLeft">
+	<ul>
+		<li>Accept that description will live in multiple formats and systems</li>
+		<li>Standardize data structure, not format</li>
+	</ul>
+</div>
+<div class="fRight">
+	<img class="whitebg" src="img/dataModel.gif" alt="Example diagram of a data model." />
+</div>
+
+---
+
 ### Date Problems
 
 <img src="img/ead2021-aspaceDate.jpg" alt="Example of Dates in ArchivesSpace with three Type options, Bulk, Inclusive, or Single."/>
@@ -118,7 +144,7 @@ As the data structure standard, EAD defines how systems work with archival descr
 * EAD3:
 	* @unitdatetype – not required. Use to record whether the unit dates are bulk or inclusive. Possible values: bulk, inclusive.
 	
-ASpace exported `<unitdate>` without `@type`
+ASpace exported "single" `<unitdate>` without `@type`
 	
 ---
 
@@ -144,31 +170,6 @@ General Administrative Files, 1965-1966, 1978-1990, 1963, 1994, undated
 * Misunderstanding between tools
 * EAD does not clearly define the structure of dates
 
----
-
-### EAD is Limiting for Aggregators
-
-* "Raw" EAD is challenging to index
-	* Hand-encoded
-	* Custom authoring tools
-* Requires skilled labor to normalize
-* Aggregators need to rely on consistent EAD
-	* ArchivesSpace
-	* EmpireADC using Archipelago-based "form tool"
-
----
-
-### From XML format to Data Model
-
-<div class="fLeft">
-	<ul>
-		<li>Accept that description will live in multiple formats and systems</li>
-		<li>Standardize data structure, not format</li>
-	</ul>
-</div>
-<div class="fRight">
-	<img class="whitebg" src="img/dataModel.gif" alt="Example diagram of a data model." />
-</div>
 
 ---
 
@@ -219,25 +220,28 @@ General Administrative Files, 1965-1966, 1978-1990, 1963, 1994, undated
 
 ### Serialization is easier
 
-* Let the developers deal with that
-* Rely on common conventions
-	* EAD2002, EAD3, JSON, RiC-Ontology
-	* Use of EAD already relies on conventions
-	```
-	<extent>32 cubic ft.</extent>
-	<extent units="cubic ft.">32</extent>
-	```
+* Let the technologists deal with that
+* Rely on common conventions for implementations
+	* EAD2002
+	* EAD3
+	* JSON
+	* Records in Context ontology (RiC-O)
+	* Spreadsheets
 
 ---
 
-### Thinking in Abstractions
+### EAD already relies on conventions
 
-<img src="img/exampleDataModel.png" alt="Example of a high level data model for archival description. This exercise may foster important conversations about how archival data should be structured." />
+```
+<extent>32 cubic ft.</extent>
+<extent units="cubic ft.">32</extent>
+```
 
 ---
 
 ### More inclusive approach
 
+* Migtation will be required at some point
 * Lowers cost of systems and integration
 * Allows new possibilities for small repositories
 	* Google Forms
