added IST601 class and updated IIPC talk

--- a/_presentations/IIPC-2023.md
+++ b/_presentations/IIPC-2023.md
@@ -7,6 +7,8 @@ link: IIPC-2023.pdf
 abstract: This presentation, co-authoed with Amanda Greenwood, overviewed the expansion and later retrenchment of UAlbany’s web archives program due to a lack of permanently funded staff. We found that web archives can be really wasteful and require increasing maintenance and scoping labor over time. While there is a rational case for increased staffing in web archives, we tried to connect our local case study with the broader resource environment in American colleges & universities, showing that this is a long term crisis for research libraries.
 ---
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/W_Rov1TIPXw?si=XceT-HU2UERq9NTT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div class="float:clear;"/>
 
 Hi everyone. I'm Greg Wiedeman. I'm the University Archivist at Albany, and I should give bit of a heads up that I'm probably going to kill the vibes at this conference with this talk. Hopefully you hear some more optimistic talks about web archives this week, but I think it's useful to have an honest understanding of what's happening in web archives collecting right now.
 
@@ -30,7 +32,7 @@ And we also noticed that our progress was creating a big maintenance backlog. It
 
 So I think we are pretty typical. There are many college & university archives collecting the web in the United States. The NDSA web archiving survey is a couple of years old now, but the majority of respondents in 2017 were college and university archives.
 
-Archive-It has also reported at least as late as 2018 that about 60% of their subscribers were college university archives, and their next category was public libraries, which now might be a bit bigger, but is subsidized by their really cool community web program. Archive-It's efforts to diversify their partner orgs really underscores how dominant colleges and universities are there.
+Archive-It has also reported at least as late as 2018 that about 60% of their subscribers were college and university archives, and their next category was public libraries, which now might be a bit bigger, but is subsidized by their really cool community web program. Archive-It's efforts to diversify their partner orgs really underscores how dominant colleges and universities are there.
 
 So really, college and university archives are really dominant in American web archives, particularly through Archive-It. The Internet Archive in practice uses us as kind of curators, as all of our collections get added to the Internet Archive, too. So, hopefully, we can do some more specialized collection that they're not able to do, and all of this gets collected and preserved.
 
@@ -38,15 +40,15 @@ Many of these organizations are public universities, and they're collecting beca
 
 [slide]
 
-It's well understood that web archives are pathetically underfunded. This is a quote from David Rosenthal, and according to those NDSA surveys over two thirds of respondents reported about quarter FTE dedicated to web archives, and this was actually an increase to from earlier surveys.
+It's well understood that web archives are pathetically underfunded. This is a quote from David Rosenthal, and according to those NDSA surveys over two thirds of respondents reported about quarter FTE dedicated to web archives, and this was actually an increase from earlier surveys.
 
 [slide]
 
-And if we look at the graph here, you can see that there's very few web archives run by deditcated staff and I agree with David that this looks pretty pathetic.
+And if we look at the graph here, you can see that there's very few web archives run by dedicated staff and I agree with David that this looks pretty pathetic.
 
 [slide]
 
-So, there's a one-year graduate assistantship that we can apply for our library. It kind of goes from department department and the student gets tuition credit and a stipend. We applied for and recieved that position for 2020 in the hopes of making this program more effective.
+So, there's a one-year graduate assistantship that we can apply for our library. It kind of goes from department to department and the student gets tuition credit and a stipend. We applied for and recieved that position for 2020 in the hopes of making this program more effective.
 
 We hired my co-author who was later hired away by Union College. The goal was to better management over what at that point had grown to 30 web archives collections and try to better document New York State politics and the death penalty. We knew there was stuff we were losing.
 
@@ -58,11 +60,11 @@ I was scheduled to go on leave for March and April, so I had about two days at t
 
 Then a pandemic happened.
 
-So, while some other web archives programs were able to shifted more resources to web archives in a remote world, Our web archive was kind of frozen. I was on leave, the person that was managing the web archive program, and this timing and not having dedicated staff coverage resulted in significant loss of documentation of university policies and practices in the rapidly changing early period of the pandemic. So that wasn't a great situation to be in.
+So, while some other web archives programs were able to shifted more resources to web archives in a remote world, Our web archive was kind of frozen. I was on leave, the person that was managing the web archive program, and with this timing and not having dedicated staff coverage the result was significant loss of documentation of university policies and practices in the rapidly changing early period of the pandemic. So that wasn't a great situation to be in.
 
 [slide]
 
-So we refocused the GA position around sort of resetting the program. We really had to rescope all active collections, be more thoughtful about collecting priorities, and try to allocate for and limit long term maintinance.
+So we refocused the GA position around sort of resetting the program. We really had to rescope all active collections, be more thoughtful about collecting priorities, and try to allocate for and limit long term maintenance.
 
 [slide]
 
